--- a/index.html
+++ b/index.html
@@ -44,5 +44,11 @@
       </main>
     </div>
   </div>
+  
+   <div class="attribution">
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Coded by <a href="https://github.com/Babray03">@Babray03</a>.
+  </div>
+  
 </body>
 </html>
